<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
        android:padding="10dp"
     android:background="@color/light_grey"
     android:orientation="vertical">
    
     <ImageView
        android:id="@+id/imgFilm"
        android:contentDescription="@string/films"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:adjustViewBounds="true"
        android:padding="10dp"
        android:src="@drawable/logo" />

     <TextView
         android:id="@+id/txtDateLocation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/imgFilm"
         android:layout_centerHorizontal="true"
         android:text="@string/date_time_location"
         android:textStyle="bold"
         android:textAppearance="?android:attr/textAppearanceMedium" />
            
            <ImageView
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/light_grey"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_below="@+id/txtDateLocation"
                android:contentDescription="@string/divider" />

            <TextView
                android:id="@+id/txtSynopsis"
                android:background="@drawable/border"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_below="@+id/divider"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:text="@string/film_synopsis"
                android:padding="10dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:id="@+id/btnTrailer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtSynopsis"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:text="@string/trailer" />
            
            <Button
                android:id="@+id/btnBuyTickets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnTrailer"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:text="@string/buy_tickets" />

</RelativeLayout>

